# rocketwave

./: .gitignore  LICENSE  README.md  pyproject.toml  relaxation_logger.py  requirements.txt
src/: compare_relaxation_timeseries.py  relaxation_logger.py  visualize_waves.py
src/live_visualisation/: __init__.py  live_eeg_stream.py  osc_visualizer.py
unity-game/: README.md
unity-game/RocketWave/: .gitignore
unity-game/RocketWave/Assets/Scenes/: RocketGame.unity  RocketPOC.unity
unity-game/RocketWave/Assets/Scripts/: BackgroundScroller.cs  GameSessionManager.cs  LeaderboardManager.cs  ResultsUI.cs  RocketController.cs  RunHUD.cs  SpeedometerHUD.cs  StartRunUI.cs  UdpRelaxationReceiver.cs
unity-game/RocketWave/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
utils/: rounded-rects.py  utils.py
