[project]
name = "rocketwave"
version = "0.1.0"
description = "Muse 2 neurofeedback: compute Relaxation Index and log/stream to game"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Jacob Kearney" }
]
dependencies = [
  "muselsl==2.3.1",
  "pylsl==1.16.2",
  "numpy==1.26.4",
  "PyQt6>=6.5",
  "pyqtgraph>=0.13",
  "python-osc>=1.8",
]

[project.scripts]
rocketwave-log = "src.relaxation_logger:main"
visualize-waves = "src.visualize_waves:main"
rocketwave-live = "src.live_visualisation.live_eeg_stream:main"
rocketwave-visual = "src.live_visualisation.osc_visualizer:main"

[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

